Add header and footer

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -1,2 +1,34 @@
 body
-  background: #000000;
+  background: #FFF;
+  font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial
+  box-sizing border-box
+
+.footer
+   .copyright
+     width: 100%
+     height: 40px
+     background-color #00b3ee
+
+.header
+  .nav
+      height 100px
+      background-color grey
+      ul
+        display inline-block
+        position absolute
+        right 30px
+        li
+          display inline-block
+          border solid 2px orange
+          margin: -3px
+          padding: 5px 10px 5px 10px
+          &:first-child
+            border-radius 5px 0 0 5px
+          &:last-child
+            border-radius 0 5px 5px 0
+
+
+  a
+    text-decoration none
+    color orange
+
