--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,35 @@
 body {
-  background: #000;
+  background: #fff;
+  font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+  box-sizing: border-box;
+}
+.footer .copyright {
+  width: 100%;
+  height: 40px;
+  background-color: #00b3ee;
+}
+.header .nav {
+  height: 100px;
+  background-color: #808080;
+}
+.header .nav ul {
+  display: inline-block;
+  position: absolute;
+  right: 30px;
+}
+.header .nav ul li {
+  display: inline-block;
+  border: solid 2px #ffa500;
+  margin: -3px;
+  padding: 5px 10px 5px 10px;
+}
+.header .nav ul li:first-child {
+  border-radius: 5px 0 0 5px;
+}
+.header .nav ul li:last-child {
+  border-radius: 0 5px 5px 0;
+}
+.header a {
+  text-decoration: none;
+  color: #ffa500;
 }
