--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,19 @@
+#gradients .panel {
+  border: 1px solid #444;
+  border-radius: 3px 3px 3px 3px;
+}
+#gradients .panel .panel-title {
+  color: #444;
+  background-color: #ccc;
+  border: 1px solid #444;
+  border-radius: 3px 0 3px 0;
+  padding: 2px 4px 2px 4px;
+  position: relative;
+  top: 2px;
+  border-top-stlye: none;
+  border-left-style: none;
+}
+
 body {
   background: #fff;
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
@@ -5,12 +21,10 @@ body {
 }
 .footer .copyright {
   width: 100%;
-  height: 40px;
   background-color: #00b3ee;
 }
 .header .nav {
-  height: 100px;
-  background-color: #808080;
+  height: 40px;
 }
 .header .nav ul {
   display: inline-block;
@@ -19,7 +33,7 @@ body {
 }
 .header .nav ul li {
   display: inline-block;
-  border: solid 2px #ffa500;
+  border: 2px solid #ffa500;
   margin: -3px;
   padding: 5px 10px 5px 10px;
 }
