--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -6,20 +6,18 @@ body
 .footer
    .copyright
      width: 100%
-     height: 40px
      background-color #00b3ee
 
 .header
   .nav
-      height 100px
-      background-color grey
+      height 40px
       ul
         display inline-block
         position absolute
         right 30px
         li
           display inline-block
-          border solid 2px orange
+          border 2px solid orange
           margin: -3px
           padding: 5px 10px 5px 10px
           &:first-child
