--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -12,4 +12,16 @@
       top 2px
       border-top-stlye none
       border-left-style none
+    .content
+      padding 40px 20px 20px 20px
+
+
+.gradient_options
+  .button_group
+    padding 4px 0 20px 0
+    margin 0 -3px
+
+
+
+
 
