--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,6 +13,13 @@
   border-top-stlye: none;
   border-left-style: none;
 }
+#gradients .panel .content {
+  padding: 40px 20px 20px 20px;
+}
+.gradient_options .button_group {
+  padding: 4px 0 20px 0;
+  margin: 0 -3px;
+}
 
 body {
   background: #fff;
