Gradient options view. In-progress

--- a/app/views/gradients.html
+++ b/app/views/gradients.html
@@ -1,5 +1,12 @@
 <section id="gradients">
-  <gradients.options></gradients.options>
-  <gradients.stops></gradients.stops>
-  <gradients.preview></gradients.preview>
+  <div class="row">
+      <div class="col-md-6">
+        <gradients.options class="gradients__panel"></gradients.options>
+        <gradients.preview class="gradients__panel"></gradients.preview>
+      </div>
+      <div class="col-md-6">
+          <gradients.stops class="gradiens__panel"></gradients.stops>
+      </div>
+  </div>
+
 </section>
