--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -10,11 +10,16 @@
       padding 2px 4px 2px 4px
       position relative
       top 2px
-      border-top-stlye none
+      border-top-style none
       border-left-style none
     .content
-      padding 40px 20px 20px 20px
+      padding 25px 10px 10px 10px
 
+  .gradients
+     &__panel {
+       width 100%
+       display inline-block
+     }
 
 .gradient_options
   .button_group
