--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,11 +10,15 @@
   padding: 2px 4px 2px 4px;
   position: relative;
   top: 2px;
-  border-top-stlye: none;
+  border-top-style: none;
   border-left-style: none;
 }
 #gradients .panel .content {
-  padding: 40px 20px 20px 20px;
+  padding: 25px 10px 10px 10px;
+}
+#gradients .gradients__panel {
+  width: 100%;
+  display: inline-block;
 }
 .gradient_options .button_group {
   padding: 4px 0 20px 0;
@@ -53,4 +57,8 @@ body {
 .header a {
   text-decoration: none;
   color: #ffa500;
+}
+.label {
+  color: #000;
+  font-size: 15;
 }
