Add gradient options

--- a/app/views/gradients.html
+++ b/app/views/gradients.html
@@ -1,7 +1,7 @@
 <section id="gradients">
   <div class="row">
       <div class="col-md-6">
-        <gradients.options class="gradients__panel"></gradients.options>
+        <gradients.options gradient="gradient" class="gradients__panel"></gradients.options>
         <gradients.preview class="gradients__panel"></gradients.preview>
       </div>
       <div class="col-md-6">
