--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -32,9 +32,32 @@
  }
 
 .gradient_stops {
-  .left_column {
+  font-size 1.25em
+  .table_wrapper {
+    height 12em;
+    padding 0 10px 0 10px
+  }
+
+  .input-lg {
+    height 2em
+    width 10em
+  }
+
+  .column {
     float: left;
+    width 40%;
     display: inline-block;
+  }
+  .column:first-child {
+    padding-top: 0;
+  }
+  .sm {
+    width 20%
+  }
+  .row {
+    padding-top: 15px
+    margin-right 0
+    margin-left 0
   }
 }
 
