--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,9 +27,32 @@
 .preview__canvas {
   height: 250px;
 }
-.gradient_stops .left_column {
+.gradient_stops {
+  font-size: 1.25em;
+}
+.gradient_stops .table_wrapper {
+  height: 12em;
+  padding: 0 10px 0 10px;
+}
+.gradient_stops .input-lg {
+  height: 2em;
+  width: 10em;
+}
+.gradient_stops .column {
   float: left;
+  width: 40%;
   display: inline-block;
+}
+.gradient_stops .column:first-child {
+  padding-top: 0;
+}
+.gradient_stops .sm {
+  width: 20%;
+}
+.gradient_stops .row {
+  padding-top: 15px;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 body {
