--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -1,20 +1,4 @@
 #gradients
-  .panel
-    border 1px solid #444
-    border-radius 3px 3px 3px 3px
-    .panel-title
-      color #444
-      background-color #CCC
-      border 1px solid #444
-      border-radius 3px 0 3px 0
-      padding 2px 4px 2px 4px
-      position relative
-      top 2px
-      border-top-style none
-      border-left-style none
-    .content
-      padding 25px 10px 10px 10px
-
   .gradients
      &__panel {
        width 100%
@@ -22,42 +6,36 @@
      }
 
 .gradient_options
+  &__container {
+    padding: 0 10px 0 10px;
+  }
+  font-size: 1.25em
   .button_group
-    padding 4px 0 20px 0
-    margin 0 -3px
+    padding 4px 0 10px 0
+    .radio_inline__label {
+      marging 0 3px 0 3px;
+    }
  .preview {
    &__canvas {
      height 250px
+   }
+   .panel-title {
+     top: 1px
    }
  }
 
 .gradient_stops {
   font-size 1.25em
-  .table_wrapper {
-    height 12em;
-    padding 0 10px 0 10px
-  }
 
-  .input-lg {
-    height 2em
-    width 10em
+  &__icon {
+    width: auto;
+    padding-left: 0px;
   }
-
-  .column {
-    float: left;
-    width 40%;
-    display: inline-block;
+  &__row {
+    padding-top: 3px;
   }
-  .column:first-child {
-    padding-top: 0;
-  }
-  .sm {
-    width 20%
-  }
-  .row {
-    padding-top: 15px
-    margin-right 0
-    margin-left 0
+  &__row:last-of-type {
+    padding-bottom: 6px;
   }
 }
 
