--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -2,11 +2,15 @@ body
   background: #FFF;
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial
   box-sizing border-box
+  font-size: 14px
+label {
+  font-weight: 400;
+}
 
 .footer
    .copyright
-     width: 100%
-     background-color #00b3ee
+     width: 100%;
+     ackground-color #00b3ee;
 
 .header
   .nav
@@ -30,7 +34,13 @@ body
     text-decoration none
     color orange
 
-.label {
-  color #000000
-  font-size 15
+.button-group {
+  display: flex
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.button-group .flex-item {
+  flex: 0 1 23%;
+  margin: 3px;
+  white-space: normal;
 }
