presets. in-progress

--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -39,6 +39,26 @@
   }
 }
 
+.gradient-presets {
+  &__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+
+  &__items {
+    flex: 0 1 15%;
+    margin: 3px;
+    white-space: normal;
+  }
+
+    .preset {
+      width: 40px;
+      height: 40px;
+      margin: 0 5px 0 5px
+    }
+}
+
 
 
 
