--- a/app/views/gradients.html
+++ b/app/views/gradients.html
@@ -2,7 +2,8 @@
   <div class="row">
       <div class="col-md-6">
         <gradients.options gradient="gradient" class="gradients__panel"></gradients.options>
-          <gradients.stops class="gradiens__panel"></gradients.stops>
+        <gradients.stops class="gradiens__panel"></gradients.stops>
+        <gradients.presets class="gradient_presets"></gradients.presets>
       </div>
       <div class="col-md-6">
           <gradients.preview class="gradients__panel"></gradients.preview>
