--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -55,7 +55,15 @@
     .preset {
       width: 40px;
       height: 40px;
-      margin: 0 5px 0 5px
+      margin: 0 5px 0 5px;
+      border: 1px solid white;
+      cursor: pointer;
+      &:hover {
+        border: 1px solid grey;
+      }
+      &:active {
+        border: 1px solid black;
+      }
     }
 }
 
