Presets. Bug fixing

--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -43,7 +43,7 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 
   &__items {
@@ -53,8 +53,8 @@
   }
 
     .preset {
-      width: 40px;
-      height: 40px;
+      width: 100px;
+      height: 100px;
       margin: 0 5px 0 5px;
       border: 1px solid white;
       cursor: pointer;
