--- a/app/views/gradients.html
+++ b/app/views/gradients.html
@@ -7,6 +7,7 @@
       </div>
       <div class="col-md-6">
           <gradients.preview class="gradients__panel"></gradients.preview>
+          <gradients.markup class="gradients-markup"></gradients.markup>
       </div>
   </div>
 
