--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -1,10 +1,18 @@
-#gradients
-  .gradients
-     &__panel {
-       width 100%
-       display inline-block
-     }
-
+#gradients {
+  .gradients {
+    &__panel {
+      width 100%
+      display inline-block
+    }
+  }
+   .panel-heading {
+     background-color: #000000;
+   }
+ .sub-header {
+   margin-top: 30px;
+   margin-bottom: 30px;
+ }
+}
 .gradient_options
   &__container {
     padding: 0 10px 0 10px;
