--- a/app/views/gradients.html
+++ b/app/views/gradients.html
@@ -1,4 +1,9 @@
 <section id="gradients">
+  <section class="sub-header">
+    <h2>CSS Gradient generator</h2>
+    <h5>This generator will produce CSS Gradient code using a simple graphical user interface. The CSS code that is generated will work in all browsers that support CSS3. The generator will produce code for linear gradients and also radial gradients, plus has the ability to import existing CSS gradient code to edit.
+      If you're finding it hard to know where to start, then just select one of our preset colors to see the resulting gradient.</h5>
+  </section>
   <div class="row">
       <div class="col-md-6">
         <gradients.options gradient="gradient" class="gradients__panel"></gradients.options>
