--- a/app/styles/rewrite/style.css
+++ b/app/styles/rewrite/style.css
@@ -461,7 +461,7 @@ textarea.form-control {
 #footer {
 	background: #222;
 	text-align: center;
-	padding: 40px 0;
+	padding-top: 10px;
 	color: #FFF;
 }
 
@@ -482,7 +482,6 @@ textarea.form-control {
 .social-links {
 	list-style: none;
 	padding: 0;
-	margin: 0 0 20px;
 }
 
 .social-links li {
@@ -585,8 +584,8 @@ textarea.form-control {
 	position: fixed;
 	display: none;
 	z-index: 999;
-	bottom: 2em;
-	right: 2em;
+	bottom: 1em;
+	right: 1em;
 }
 
 .scroll-up a {
