--- a/app/styles/gradients.styl
+++ b/app/styles/gradients.styl
@@ -2,7 +2,8 @@
   .gradients {
     &__panel {
       width 100%
-      display inline-block
+      display inline-block;
+	  min-height: 300px;
     }
   }
    .panel-heading {
