--- a/app/views/gradients.html
+++ b/app/views/gradients.html
@@ -6,13 +6,13 @@
   </section>
   <div class="row">
       <div class="col-md-6">
-        <gradients.options gradient="gradient" class="gradients__panel"></gradients.options>
-        <gradients.stops class="gradiens__panel"></gradients.stops>
-        <gradients.presets class="gradient_presets"></gradients.presets>
+        <gradients.options gradient="gradient" class="gradients__panel wow slideInLeft"></gradients.options>
+        <gradients.stops class="gradients__panel wow slideInLeft"></gradients.stops>
+        <gradients.presets class="gradient_presets gradients__panel wow slideInLeft"></gradients.presets>
       </div>
       <div class="col-md-6">
-          <gradients.preview class="gradients__panel"></gradients.preview>
-          <gradients.markup class="gradients-markup"></gradients.markup>
+          <gradients.preview class="gradients__panel wow slideInRight"></gradients.preview>
+          <gradients.markup class="gradients__panel gradients-markup wow slideInRight"></gradients.markup>
       </div>
   </div>
 
