JohnPapa: controllerAs syntax

--- a/app/views/gradients.html
+++ b/app/views/gradients.html
@@ -6,7 +6,7 @@
   </section>
   <div class="row">
       <div class="col-md-6">
-        <gradients.options gradient="gradient" class="gradients__panel wow slideInLeft"></gradients.options>
+        <gradients.options gradient="gradVm.gradient" class="gradients__panel wow slideInLeft"></gradients.options>
         <gradients.stops class="gradients__panel wow slideInLeft"></gradients.stops>
         <gradients.presets class="gradient_presets gradients__panel wow slideInLeft"></gradients.presets>
       </div>
