--- a/app/styles/rewrite/style.css
+++ b/app/styles/rewrite/style.css
@@ -800,17 +800,43 @@ textarea.form-control {
 /*---------------*/
 
 figure.effect-bubba {
-	background: #9e5406;
+	background: #333333;
 }
 
 figure.effect-bubba img {
-	opacity: 0.7;
+	opacity: 0.9;
 	-webkit-transition: opacity 0.35s;
 	transition: opacity 0.35s;
+	width: 100%;
 }
 
 figure.effect-bubba:hover img {
-	opacity: 0.4;
+	opacity: 0.1;
+}
+
+figure.effect-bubba .img-holder {
+	display: table-cell;
+	width: 360px;
+	height: 240px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+figure.effect-bubba figcaption span {
+	display: none;
+	opacity: 0;
+	transition: opacity 0.35s;
+	-webkit-transition: -webkit-transform 0.35s;
+	transition: transform 0.35s;
+	-webkit-transition: opacity 0.35s;
+	-webkit-transform: translate3d(0,-20px,0);
+	transform: translate3d(0,-20px,0);
+}
+
+figure.effect-bubba:hover figcaption span {
+	display: inline;
+	line-height: 85px;
+	opacity: 1;
 }
 
 figure.effect-bubba figcaption::before,
@@ -827,21 +853,22 @@ figure.effect-bubba figcaption::after {
 }
 
 figure.effect-bubba figcaption::before {
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid #fff;
+	border-top: 2px solid #fff;
+	border-bottom: 2px solid #fff;
 	-webkit-transform: scale(0,1);
 	transform: scale(0,1);
 }
 
 figure.effect-bubba figcaption::after {
-	border-right: 1px solid #fff;
-	border-left: 1px solid #fff;
+	border-right: 2px solid #fff;
+	border-left: 2px solid #fff;
 	-webkit-transform: scale(1,0);
 	transform: scale(1,0);
 }
 
 figure.effect-bubba h2 {
 	padding-top: 10%;
+	font-weight: bold;
 	-webkit-transition: -webkit-transform 0.35s;
 	transition: transform 0.35s;
 	-webkit-transform: translate3d(0,-20px,0);
